# firm

./: .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  README.md
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/theme/: custom.css
example/core/: channels.firm
example/network/: colleagues.firm
example/sales/: acme_corp.firm
example/schemas/: account.firm  channel.firm  contact.firm  interaction.firm  lead.firm  opportunity.firm  project.firm  strategy.firm
firm_cli/: AGENTS.md.template  Cargo.toml
firm_cli/src/: cli.rs  logging.rs  main.rs  ui.rs
firm_core/: Cargo.toml
firm_core/src/: entity.rs  field.rs
firm_lang/: Cargo.toml
firm_lang/src/: defaults.rs  lib.rs
firm_lang/tests/: convert_entity_tests.rs  convert_query_tests.rs  convert_schema_tests.rs  parser_entity_tests.rs  parser_query_tests.rs  parser_schema_tests.rs  (+2 more)
firm_lsp/: Cargo.toml
firm_lsp/src/: completion.rs  lib.rs  main.rs  server.rs
firm_mcp/: Cargo.toml
firm_mcp/src/: lib.rs  resources.rs  server.rs
firm_mcp/src/tools/: add_entity.rs  build.rs  delete_source.rs  dsl_reference.rs  dsl_reference_content.rs  find_source.rs  get.rs  list.rs  mod.rs  query.rs  read_source.rs  related.rs  replace_source.rs  search_source.rs  source_tree.rs  write_source.rs
firm_mcp/tests/: add_entity_tests.rs  delete_source_tests.rs  find_source_tests.rs  get_tests.rs  helpers.rs  list_tests.rs  query_tests.rs  read_source_tests.rs  related_tests.rs  replace_source_tests.rs  search_source_tests.rs  source_tree_tests.rs  write_source_tests.rs
(+94 files in other folders)
